Bug 90850 - TOOLBAR: Cant set alignment of a single shape in Writer
Summary: TOOLBAR: Cant set alignment of a single shape in Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium minor
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:6.2.0
Keywords:
: 107342 (view as bug list)
Depends on:
Blocks: Unify-Across-Apps Shapes Writer-Toolbars
  Show dependency treegraph
 
Reported: 2015-04-25 00:53 UTC by Yousuf Philips (jay) (retired)
Modified: 2018-10-23 11:43 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2015-04-25 00:53:55 UTC
Steps:
1) Open Writer
2) Draw a shape
3) The 'Drawing Object Properties' toolbar's 'Alignment' split button (.uno:ObjectAlign) is disabled

This is a different case for impress/draw where the split button is active after drawing a shape. This causes a problem to what user's expect as when they insert an image in writer, there are vertical and horizontal alignment buttons to use.

Version: 5.0.0.0.alpha1+
Build ID: badec7478035008f514e0976a94438fe2e32dc40
TinderBox: Linux-rpm_deb-x86@45-TDF, Branch:master, Time: 2015-04-22_00:50:58
Comment 1 Joel Madero 2015-04-25 03:19:54 UTC
Not a bug - if you anchor as character it is treated like a character and then you can align it. Marking as NOTABUG.
Comment 2 Yousuf Philips (jay) (retired) 2015-04-25 04:44:56 UTC
Anchoring it as character only permits you to change the vertical alignment of the shape on the line and the horizontal alignment buttons do not work.
Comment 3 A (Andy) 2015-04-25 07:02:56 UTC
Reproducible with LO 4.4.2.2, Win 8.1

If I draw a shape it is by default Anchor = To Paragraph and the Alignment section in the right mouse click context menu is disabled.  
If I change the Anchor to To Page or To Character then I can move the shape with the cursor vertically and horizontally, but the Alignment section is still disabled.
If I change the Anchor to As Character then I can move the shape with the cursor vertically (but not horizontally) and the Alignment section shows me the options to place the shape vertically.
Comment 4 Buovjaga 2015-04-27 19:11:34 UTC
NEW per comment 3.
Comment 5 QA Administrators 2016-09-20 09:34:08 UTC Comment hidden (obsolete)
Comment 6 Maxim Monastirsky 2017-10-22 21:22:41 UTC
*** Bug 107342 has been marked as a duplicate of this bug. ***
Comment 7 Maxim Monastirsky 2017-10-22 21:25:37 UTC
The button works when you select 2 shapes, so the request here is to make it work also with a single shape, like in Impress.
Comment 8 Maxim Monastirsky 2018-09-17 21:18:24 UTC
I have the Writer part ready on gerrit:

https://gerrit.libreoffice.org/60649/

(Not sure if I'll do also the Calc part.)
Comment 9 Commit Notification 2018-09-19 18:25:50 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1a72dbb390e9cf6e61b6503f3c575ba531d547d8

tdf#90850 Enable align commands for a single shape in Writer

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2018-10-23 11:27:40 UTC
A polite ping to Maxim Monastirsky:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Otherwise, Could you please explain what's missing?
Thanks
Comment 11 Maxim Monastirsky 2018-10-23 11:43:06 UTC
(In reply to Xisco Faulí from comment #10)
> Otherwise, Could you please explain what's missing?
Writer part is done, Calc part is still missing. But now I found that the Calc part is also reported in Bug 100394, so I think we can change this bug to Writer only, and close as RESOLVED FIXED.