tdf#90850 Enable align commands for a single shape in Writer

Similar to images and frames. Just exposes the existing
position settings from the "Position and Size" dialog.

Change-Id: Ifa7e91f695af74d5297412e5ffeb12286ec63767
Reviewed-on: https://gerrit.libreoffice.org/60649
Tested-by: Jenkins
Reviewed-by: Maxim Monastirsky <momonasmon@gmail.com>